# wtensor

./: Cargo.toml  README.md
examples/: matmul.rs
src/: device.rs  error.rs  lib.rs  shaders.wgsl  shaders_add.wgsl  shaders_fill.wgsl  shaders_gemm.wgsl  tensor.rs
